--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - "8080:8080"
     environment:
       # Configuración de la base de datos para Spring Boot
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/inventory_db
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-database:5432/inventory_db
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: password
       # Configuración de Redis para Spring Boot
