Pruebas de caching y correcciones config, separacion entorno local y entorno dockerizado

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,8 @@
 spring.application.name=gestorinventarioproductos
 
 # Configuracion del Servidor Web (Puerto), El puerto en el que escuchara tu API
-# El puerto en local es 8081 ya qu eel 8080 es de la aplicacion desplegada en docker
-server.port=8080
+# El puerto en local es 8081 ya que el 8080 es de la aplicacion desplegada en docker
+server.port=8081
 
 # Configuracion de la Fuente de Datos (Datasource) para PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_db
@@ -31,8 +31,14 @@ app.jwtExpirationMs=86400000
 
 # Logging
 logging.level.org.springframework=DEBUG
+logging.level.org.springframework.data.redis=DEBUG
+logging.level.io.lettuce.core=DEBUG
+logging.level.org.springframework.cache=DEBUG
+logging.level.org.springframework.data.jpa=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
 # Ajusta 'com.example.inventory' a tu package base
-logging.level.com.example.inventory=DEBUG
+logging.level.com.santicodev.gestorinventarioproductos=DEBUG
 # Para ver las SQL queries
 logging.level.org.hibernate.SQL=DEBUG
 # Para ver los parametros de las queries
