--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,17 @@ services:
       # Configuración de Redis para Spring Boot
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
+      # Nivel de logging para debug (opcional, pero útil)
+      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_DATA_REDIS: DEBUG
+      LOGGING_LEVEL_IO_LETTUCE_CORE: DEBUG
+      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CACHE: DEBUG
+      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_DATA_JPA: DEBUG
+      LOGGING_LEVEL_ORG_HIBERNATE: DEBUG
+      LOGGING_LEVEL_COM_ZAXZAX_HIKARICP: DEBUG
       # Configuración JWT (para que la app funcione dentro del contenedor)
+      # Variables para JWT (puedes dejarlas aquí para dev/test, en prod usar secretos)
+      # APP_JWTSECRET: ${APP_JWTSECRET} # Tu secreto JWT, cargado desde .env si usas
+      # APP_JWTEXPIRATIONMS: ${APP_JWTEXPIRATIONMS} # Tiempo de expiración JWT
       APP_JWTSECRET: SuperSecretKeyForJWTAuthenticationInMyInventoryAppThatShouldBeVeryLongAndComplexForProductionUse # ¡Repite tu JWT secret!
       APP_JWTEXPIRATIONMS: 86400000
     depends_on:
